--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,11 +9,15 @@
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.inputsystem": "1.14.2",
     "com.unity.multiplayer.center": "1.0.0",
-    "com.unity.multiplayer.playmode": "1.6.1",
+    "com.unity.multiplayer.playmode": "1.6.2",
     "com.unity.netcode.gameobjects": "2.7.0",
+    "com.unity.remote-config": "4.2.3",
     "com.unity.render-pipelines.universal": "17.0.4",
+    "com.unity.services.cloudsave": "3.4.0",
     "com.unity.services.friends": "1.1.1",
+    "com.unity.services.leaderboards": "2.3.3",
     "com.unity.services.multiplayer": "1.1.8",
+    "com.unity.services.vivox": "16.7.0",
     "com.unity.test-framework": "1.5.1",
     "com.unity.timeline": "1.8.9",
     "com.unity.ugui": "2.0.0",
